[package]
name = "airbend-ingest"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
indoc = "2"
reqwest = "0.12.7"
serde = { version = "1.0.210", features = ["derive"] }
url = "2.5.2"
anyhow = "1.0.89"
airbend_table = { path = "../airbend_table" }

# airbend_table_derive = { path = "../airbend_table_derive" }
